2009-03-07 Holger Vogt
  * inpcom.c fcn inp_fix_for_numparam(): no quotes changed for plot lines within
    control section, e.g. plot v(2) xlabel 'my input' ylabel 'output'

2009-03-07 Dietmar Warning
 * tests/bsim4/*.out: same as below for bsim3

2009-03-07 Holger Vogt
  * spicenum.c inpcom.c subckt.c xpressn.c numpaif.h numparam.h general.h
    Collect information to allow dynamic memory allocation for numparam
    ( Still to be implemented ! )
    Defined in inpcom.c: dynmaxline dynnLen dynMaxckt dynsubst

2009-03-03 Dietmar Warning
 * tests/bsim3/*_sim/*.out: adapt output format to spice3 numdgt convention, most 
   tests are running except tran tests and op-amp ac test.
 * test/bin/check.sh: extend the filter rules by two keywords, not nice but works

2009-03-01 Dietmar Warning
 * spicelib/parser/inp2q.c: allow 4-terminal instances for adms, then the fifth
   node will be set to ground (same as substrate node for gp if fourth node 
   isn't set). Checked with lots of examples but not 100% waterproof.
 * tests/bsim3: reorganized the entire directory structure with focus only to the
   latest published Berkeley testbench for bsim3. ac and tran test included but
   there are still problems in comparing their spice3 results to ngspice.
 * adms/hicum0,hicum2,mextram/*.va: Using GMIN from simulator will improve op 
   solution, e.g. by gmin stepping. The coupling of _circuit_gmin to ckt->CKTgmin
   is generated by adms in ngspiceMODULEdefs.h.

2009-02-28 Holger Vogt
 * inp.c:605 ff, fcn inp_spsource(), if preproc. flag OUTDECK defined,
   the deck is saved as debug-out2.txt, here after parameter substitution

2009-02-25 Holger Vogt
 * inpdomod.c:436 error message adapted to existing devices
 * /frontend/numparam/numparam.h, general.h: length of char arrays
   set to 40000
 * inpcom.c: preprocessor flag OUTDECK, if set will save complete 
   deck into debug-out.txt
     
2009-02-25 Dietmar Warning
 * spicelib/parser/inp2q.c,155: 5-terminal only for adms bipolars
